--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,9 @@ flutter:
           #weight: 700
         #- asset: assets/fonts/poppins/Poppins-Italic.ttf
           #style: italic
-
+  assets:
+    - assets/images/btnGoogle.png
+    - assets/images/btnFacebook.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
